--- a/src/main/resources/module/style.css
+++ b/src/main/resources/module/style.css
@@ -1,327 +1,333 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url("http://fonts.googleapis.com/css?family=Poppins:ital,wght@0,300;0,400");
 *{
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
-.body{
-    background: #f6f5f7;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
-	margin: -20px 0 50px;
+body{
+    background: #f8f8f8;
 }
-h1, h2, h3, h4, h5, h6{
-    font-family: 'Nova Round', cursives;
+:root {
+    --gradient: linear-gradient(to right, #e2336b, #fcac46)
 }
-.wrap{
-    background: rgba(0,0,0,0.5) url(https://images.pexels.com/photos/6802046/pexels-photo-6802046.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500) no-repeat;
-    background-position: center;
-    background-size: cover;
-    min-height: 100vh;
-    overflow: hidden;
-    background-blend-mode: overlay;
+.sidebar {
+    position: fixed;
+    width: 300px;
+    height: 100vh;
+    background: #f8f8f8;
+    padding: 20px;
 }
-.wave{
+.main-home {
     position: absolute;
-    width: 100%;
-    bottom: -140px;
-    color: rgb(8, 8, 8);
-    opacity: 1;
-}
-.header{
-    position: fixed;
+    width: calc(100% - 300px);
+    min-height: 100vh;
     top: 0;
-    left: 0;
-    width: 100%;
-    padding: 25px 80px;
-    background: linear-gradient(to top, transparent, rgba(0,0,0,0.6));
+    left: 300px;
+    background: #fff;
+    border-radius: 1rem 0 0 1rem;
+    z-index: 1000;
 }
-header .logo{
-    font-size: 28px;
-    font-weight: 700;
-    color: #fff;
-    float: left;
+.logo img {
+    width: 140px;
 }
-header .menu{
-    float: right;
-    margin-top: 5px;
+.profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 0rem;
 }
-header ul li{
-    display: inline-block;
+.profile-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid #e2336b;
 }
-header ul li a{
-    text-decoration: none;
-    font-size: 16px;
-    color: #fff;
-    margin: 0 25px;
-    font-weight: 300;
-    letter-spacing: 1px;
+.profile-img img {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 50%;
+    object-position: center;
 }
-.content{
-    max-width: 55%;
-    padding: 200px 80px 0;
-    color: #fff;
+.name {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0 0.4rem;
 }
-.content h1{
-    font-size: 48px;
-    text-align: center !important;
+.name h1 {
+    font-size: 1.1rem;
 }
-.content h1{
-    font-size: 48px;
-    text-align: center !important;
+.name img{
+    margin-left: 4px;
+    width: 20px;
+    object-fit: contain;
 }
-.content p{
-    font-size: 25px;
-    padding: 25px 0;
-    font-weight: 300;
+.profile-img span {
+    font-size: 0.938rem;
+    font-weight: 400;
 }
-.content .btn-group{
-    margin-top: 1px;
+.about {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
 }
-.content .btn-group .am{
-    margin-right: 1px;
-}
-.content .btn-group .pm{
-    margin-left: 350px;
-}
-.content .btn-group .time{
-    margin-left: 450px;
-}
-.content a{
-    display: inline-block;
-    padding: 15px 45px;
-    text-decoration: none;
-    color: #fff;
-    border-radius: 50px;
-}
-.content a.color1{
-    background: hsl(192,70%,51%),;
-	background: -webkit-linear-gradient(to right, hsl(192,70%,51%), hsl(136,65%,51%));
-	background: linear-gradient(to right, hsl(192,70%,51%), hsl(136,65%,51%));
-	background-repeat: no-repeat;
-}
-#map{
-    height:500px;
-    width: 100%;
-}
-
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
+.box {
     text-align: center;
-    z-index: 999;
 }
-
-footer p {
-    margin: 10px 0;
+.box h3{
+    font-size: 1rem;
+    font-weight: 500;
 }
-/*LogIn*/
-p {
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 20px 0 30px;
+.box span {
+    font-size: 0.938rem;
+    font-weight: 400;
 }
-span {
-	font-size: 12px;
+.menu a {
+    width: 100%;
+    font-size: 1rem;
+    color: #000;
+    display: flex;
+    align-items: center;
+    line-height: 40px;
 }
-
-a {
-	color: #333;
-	font-size: 14px;
-	text-decoration: none;
-	margin: 15px 0;
+.menu a:hover,
+.menu .active{
+    color: #e2336b;
 }
-
-button {
-	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
+.menu .icon {
+    margin-right: 1rem;
+    font-size: 20px;
 }
-
-button:active {
-	transform: scale(0.95);
+.menu a:hover::before,
+.menu .active::before{
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 2px;
+    height: 17px;
+    background: #e2336b;
 }
-
-button:focus {
-	outline: none;
+/*Main Home*/
+.main-home {
+    padding: 20px;
+    overflow: hidden;
 }
-
-button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-
-form {
-	background-color: #FFFFFF;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
+.search {
+    display: flex;
+    align-items: center;
+    background: #f8f8f8;
+    width: 200px;
+    height: 2.4rem;
+    padding: 10px;
+    border-radius: 10px;
 }
-
-input {
-	background-color: #eee;
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
+.search input {
+    border: none;
+    outline: none;
+    background: transparent;
+    margin-left: 7px;
 }
-
-.container {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25),
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
-    margin-bottom: 100px;
+.search o {
+    font-size: 20px;
 }
-
-.form-container {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
+.header-content{
+    display: flex;
+    align-items:center;
 }
-
-.sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 2;
+.header-content i{
+    color: #000;
+    font-size: 20px;
+    margin-left: 1rem;
 }
-
-.container.right-panel-active .sign-in-container {
-	transform: translateX(100%);
+.header-content .btn{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 8px;
+    background: var(--gradient);
+    margin-left: 1rem;
 }
-
-.sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
+.header-content .btn i {
+    color: hsla(0, 0%, 100%, 0.6);
+    margin: 10px;
 }
-
-.container.right-panel-active .sign-up-container {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
+.btn-text{
+    color: #fff;
 }
-
-@keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
-
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
-	}
+.stories-title {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
 }
-
-.overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
+.stories-title h1 {
+    font-size: 1.8rem;
 }
-
-.container.right-panel-active .overlay-container{
-	transform: translateX(-100%);
+.stories-title .btn {
+    display: flex;
+    align-items: center;
+    color: rgb(8, 8, 8);
 }
-
-.overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+.stories-title .btn i {
+    font-size: 24;
+    margin-right: 10px;
 }
-
-.container.right-panel-active .overlay {
-  	transform: translateX(50%);
+.stories {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2rem;
 }
-
-.overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 40px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+.stories-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid #e2336b;
 }
-
-.overlay-left {
-	transform: translateX(-20%);
+.stories-img img {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 50%;
+    object-position: center;
 }
-
-.container.right-panel-active .overlay-left {
-	transform: translateX(0);
+.stories-img.color {
+    border: 2px solid #e0e0e0;
 }
-
-.overlay-right {
-	right: 0;
-	transform: translateX(0);
+.feed {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
 }
-
-.container.right-panel-active .overlay-right {
-	transform: translateX(20%);
+.feed h1 {
+    font-size: 1.7rem;
 }
-
-.social-container {
-	margin: 20px 0;
+.feed-text {
+    display: flex;
+    align-items: center;
 }
-
-.social-container a {
-	border: 1px solid #DDDDDD;
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
+.feed-text h2 {
+    font-size: 1rem;
+    margin-right: 1rem;
+}
+.main-posts {
+    display: flex;
+    grid-template-columns: repeat(auto-fit,minmax(300px, auto));
+    gap: 11px;
+    overflow-x: scroll;
+}
+.main-posts::-webkit-scrollbar {
+    display: none;
+}
+.post-box {
+    width: 300px;
+}
+.post-box img {
+    width: 100%;
+    height: 344px;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+.post-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.post-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    border: 2px solid #e2336b;
+    border-radius: 50%;
+}
+.post-img img {
+    width: 27px;
+    height: 27px;
+    object-fit: cover;
+    border-radius: 50%;
+    object-position: center;
+}
+.post-profile {
+    display: flex;
+    align-items: center;
+}
+.post-profile h3{
+    font-size: 12px;
+    font-weight: 600px;
+    margin-left: 5px;
+}
+.likes{
+    display: flex;
+    align-items: center;
+}
+.like i {
+    font-size: 20px;
+    margin-left: 10px;
+}
+.likes span {
+    font-size: 14px;
+    margin-left: 7px;
+}
+.post-box video {
+    width: 150%;
+    height: 344px;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+.post-video {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    border: 2px solid #e2336b;
+    border-radius: 50%;
+}
+.post-video video {
+    width: 27px;
+    height: 27px;
+    object-fit: cover;
+    border-radius: 50%;
+    object-position: center;
+}
+/*Videos*/
+.main-videos {
+    display: flex;
+    grid-template-columns: repeat(auto-fit,minmax(300px, auto));
+    gap: 100px;
+}
+/*Live game play order*/
+.wrapper{
+    width: 400px;
+    max-width: 90%;
+    margin: 0 auto;
+}
+.wrapper label{
+    display: block;
+    margin: 0.5em 0;
+}
+.wrapper label input{
+    font-size: 18px;
+    padding: 0.5em;
+}
+.wrapper input[type="submit"]{
+    font-size: 25px;
+    color: blue;
 }
